[package]
name = "pallet-collator-assignment"
authors = { workspace = true }
description = "Collator assignment pallet"
edition = "2021"
license = "GPL-3.0-only"
version = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]
[dependencies]
dp-collator-assignment = { workspace = true }
frame-benchmarking = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive", "max-encoded-len" ] }
rand = { workspace = true }
rand_chacha = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true, features = [ "derive" ] }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
tp-traits = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = [ "std" ]
std = [
	"dp-collator-assignment/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
	"sp-runtime/std",
	"sp-std/std",
	"tp-traits/std",
	"log/std",
	"rand/std",
	"rand_chacha/std",
	"serde?/std",
	"sp-core/std",
	"sp-io/std"
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"tp-traits/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks"
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime"
]
