[package]
name = "pallet-community-loan-pool"
version = "4.0.0-dev"
description = "The Xcavate pallet community-loan-pool"
authors = ["Xcavate Network"]
homepage = "https://xcavate.io"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/XcavateBlockchain/MarketplaceMVP_Substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = [
	"derive",
] }
serde = { version = "1.0.163", features = ["derive"], optional = true }
frame-benchmarking = {  default-features = false, optional = true, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
frame-support = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
frame-system = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-std = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }

pallet-uniques = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
pallet-nfts = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
pallet-contracts = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
pallet-balances = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
pallet-timestamp = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
pallet-transaction-payment = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
pallet-insecure-randomness-collective-flip = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
enumflags2 = { version = "0.7.7" }

[dev-dependencies]
sp-core = {  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-io = {  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-runtime = {  git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }




[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde",
	"pallet-uniques/std",
	"pallet-nfts/std",
	"pallet-contracts/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-insecure-randomness-collective-flip/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
