[package]
name = "pallet-configuration"
authors = { workspace = true }
description = "Configuration pallet"
edition = "2021"
license = "GPL-3.0-only"
version = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]
[dependencies]
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true, default-features = false, features = [ "derive", "max-encoded-len" ] }
scale-info = { workspace = true, default-features = false }
serde = { workspace = true, optional = true, features = [ "derive" ] }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
tp-traits = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true, default-features = false }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
	"tp-traits/std",
]
try-runtime = [ "frame-support/try-runtime" ]
