[package]
name = "pallet-external-validator-slashes"
authors = { workspace = true }
description = "External validator info slashes"
edition = "2021"
license = "GPL-3.0-only"
version = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[lints]
workspace = true

[dependencies]
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive", "max-encoded-len" ] }
pallet-session = { workspace = true }
pallet-staking = { workspace = true }
scale-info = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-staking = { workspace = true }
tp-traits = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }

[features]
default = [ "std" ]
std = [
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-staking/std",
	"parity-scale-codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"tp-traits/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"scale-info/std",
	"sp-runtime/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
	"tp-traits/runtime-benchmarks",
]

try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-session/try-runtime",
	"sp-runtime/try-runtime",
]